# ilovenoise

./: .gitignore  Cargo.toml  README.md  build.rs  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
benches/: noise.rs
example-tasks/: simple.toml
ilovenoise-core/: Cargo.toml  README.md
ilovenoise-core/benches/: bench_tasks.toml  noise.rs
ilovenoise-core/src/: image.rs  lib.rs  tasking.rs
ilovenoise-core/src/algo/: mod.rs  perlin.rs  random_noise.rs
ilovenoise-core/src/algo/snapshots/: ilovenoise_core__algo__perlin__tests__perlin_snapshot.snap
src/: cli.rs  cli_long_about.txt  image.rs  lib.rs  main.rs  tasking.rs  util.rs
src/algo/: mod.rs  perlin.rs  random_noise.rs
src/algo/snapshots/: ilovenoise__algo__perlin__tests__perlin_snapshot.snap  ilovenoise__algo__random_noise__tests__random_snapshot.snap
