[package]
name = "ilovenoise"
version = "0.2.0"
edition = "2024"
description = "Simple image noise generator"
license = "MIT"
repository = "https://github.com/r41ngee/ilovenoise"
readme="README.md"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
png = "0.18.1"
rand = "0.10.1"
rand_chacha = "0.10.0"
