[workspace]
members = ["ilovenoise-core"]

[package]
name = "ilovenoise"
version = "0.4.1"
edition = "2024"
description = "Simple image noise generator"
license = "MIT"
repository = "https://github.com/r41ngee/ilovenoise"
readme = "README.md"
exclude = [".github"]

[package.metadata.wix]
upgrade-guid = "9C79645E-2765-4053-8AB3-FEB0BF2510AA"
path-guid = "210F4AA9-E8D5-44E6-B119-13D01C4B62D6"
license = false
eula = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
png = "0.18.1"
rand = "0.10.1"
rand_chacha = "0.10.0"

ilovenoise-core = { path = "ilovenoise-core", features = ["tasking"] , version = "0.4.1" }

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = true

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
