[package]
name = "ilovenoise-core"
version = "0.4.1"
edition = "2024"
description = "Procedural noise generation algorithms (Perlin, random)"
license = "MIT"
repository = "https://github.com/r41ngee/ilovenoise"
readme = "README.md"
keywords = ["noise", "perlin", "image", "generator"]
categories = ["multimedia::images"]

[features]
default = ["tasking"]
tasking = ["serde", "toml"]

[dependencies]
rand = "0.10.1"
rand_chacha = "0.10.0"
rayon = "1.12.0"

serde = { version = "1.0.228", features = ["derive"], optional = true }
toml = { version = "1.1.2", optional = true }

[dev-dependencies]
insta = "1.48.0"
criterion = { version = "0.8.2", features = ["html_reports"] }
png = "0.18.1"

[[bench]]
name = "noise"
harness = false
